--- a/react/index.html
+++ b/react/index.html
@@ -7,7 +7,7 @@
   <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="static/vendors/Materialize/dist/css/materialize.min.css"
+  <link type="text/css" rel="stylesheet" href="static/vendors/Materialize/dist/css/materialize.css"
         media="screen,projection"/>
   <!--Let browser know website is optimized for mobile-->
 
