--- a/angular1/app/elements/hello/hello.html
+++ b/angular1/app/elements/hello/hello.html
@@ -1,70 +1,27 @@
 <template id="my-tpl">
-  <style>   
-    :host{
-      padding:0 20px;
-    } 
-    .name{
-      color:white;
-      text-transform: uppercase;
-    }
-    .icon{
-      width:20px;
-      position:relative;
-      top:4px;
-    }
-    .name:hover{
-      text-decoration:underline;
-    }
-  </style>  
-  <a id="logout">
-    <span class="name"></span>
-    <img class="icon" src="elements/hello/logout.svg"/>
-  </a>  
+	<style>
+		:host {
+			padding: 0 20px;
+		}
+		
+		.name {
+			color: white;
+			text-transform: uppercase;
+		}
+		
+		.icon {
+			width: 20px;
+			position: relative;
+			top: 4px;
+		}
+		
+		.name:hover {
+			text-decoration: underline;
+		}
+	</style>
+	<a id="logout">
+		<span class="name">LOL</span>
+		<img class="icon" src="elements/hello/logout.svg" />
+	</a>
 </template>
-
-
-<script>
-  (function onload(){
-    console.log('component load');
-
-    var myDocument=document.currentScript.ownerDocument;
-    var proto = Object.create(HTMLElement.prototype, {
-      createdCallback: {
-        value: function() {
-          var template = myDocument.querySelector('#my-tpl');
-          var clone = document.importNode(template.content, true);
-          var shadow = this.createShadowRoot();
-          shadow.appendChild(clone);
-          this.setEvents();
-        }
-      },
-      setEvents: {
-        value:function(){
-          var span = this.shadowRoot.querySelector('.name');
-          var btn = this.shadowRoot.querySelector('#logout');
-
-          btn.onclick = function(){
-            var event = new CustomEvent("logout");
-            this.dispatchEvent(event);
-          };
-
-        }
-      },
-      attributeChangedCallback: {
-        value:function(attr){
-            if(attr==="name"){
-              var span = this.shadowRoot.querySelector('.name');
-              if (span.textContent || span.textContent === "") {
-                span.textContent = this.getAttribute( attr );
-              }
-            }            
-        }
-      }
-    });
-
-    document.registerElement('user-link', {
-      prototype: proto
-    });
-  })()
-
-</script>
+<script src="hello.js"></script>
