--- a/angular1/app/index.html
+++ b/angular1/app/index.html
@@ -9,9 +9,6 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-
-
-
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
@@ -24,9 +21,10 @@
 
     <script>    
       // setup Polymer options
-      window.Polymer = {lazyRegister: true, dom: 'shadow'};
+      //window.Polymer = {lazyRegister: true, dom: 'shadow'};
     </script>
     <link rel="import" href="elements/hello/hello.html">
+    <link rel="import" href="elements/frf-login/elements.html">
     <link rel="import" href="elements/frf-login/frf-login.html">
     <link rel="import" href="elements/google-map-wrapper/google-map-wrapper.html">
     <link rel="import" href="bower_components/google-map/google-map.html">
@@ -36,15 +34,14 @@
 
     <div ng-controller="MainCtrl">
        <md-toolbar md-scroll-shrink class="header">
-        <a href="#/login"><img class="logo" src="images/logo-people.svg" /></a>
+        <a href="#!/login"><img class="logo" src="images/logo-people.svg" /></a>
         <span class="flex"></span>
         <user-link ng-show="userName" name="{{userName}}" logout="onLogout()" bind-polymer-event="logout"></user-link>
-        <a href="#/peoples">
+        <a href="#!/peoples">
           <md-icon  md-svg-src="images/md-list.svg"></md-icon>
         </a>
       </md-toolbar>
         <div class="container" ng-view=""></div>
-
     </div>
 
 
@@ -59,13 +56,13 @@
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
-    <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+    <script src="bower_components/shadycss/scoping-shim.min.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <script src="bower_components/promise-polyfill/Promise.js"></script>
-    <script src="bower_components/web-animations-js/web-animations.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
-    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
