--- a/elements/frf-login/demo.html
+++ b/elements/frf-login/demo.html
@@ -5,6 +5,7 @@
   <title>frf-login Demo</title>
   <link rel="import" href="./bower_components/shadycss/apply-shim.html">  
   <script src="./bower_components/webcomponentsjs/webcomponents-lite.js"></script>  
+  <link rel="import" href="elements.html">
   <link rel="import" href="frf-login.html">
   
 
