--- a/elements/frf-login/frf-login.html
+++ b/elements/frf-login/frf-login.html
@@ -1,6 +1,3 @@
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="./bower_components/polymer/lib/elements/dom-if.html">
-<link rel="import" href="./bower_components/paper-material/paper-material.html">
 <link rel="import" href="./frf-login-service.html">
 <link rel="import" href="./frf-login-form.html">
 
@@ -92,7 +89,7 @@
 
              ::slotted(#title) {
                 color: black;
-                padding-right: 20px;
+                padding-left: 20px;
                 font-size: 24px;
                 text-transform: uppercase;
                 @apply --title-theme;
