--- a/angular2/src/assets/elements/frf-login/frf-login.html
+++ b/angular2/src/assets/elements/frf-login/frf-login.html
@@ -80,14 +80,14 @@
             }
             /* FORM LOGO*/
 
-            #container::slotted(#logo) {
+            #content ::slotted(#logo) {
                 height: 64px;
                 width: 64px;
                 @apply --logo-theme;
             }
             /* FORM TITLE*/
 
-            #container::slotted(#title) {
+            #content ::slotted(#title) {
                 color: black;
                 padding-left: 20px;
                 font-size: 24px;
