--- a/vuejs/index.html
+++ b/vuejs/index.html
@@ -8,17 +8,26 @@
 
     <script>    
       // setup Polymer options
-      window.Polymer = {dom:'shadow'};
+      //window.Polymer = {dom:'shadow'};
     </script>
 
+    <style>      
+      frf-login.ready {
+        display: block;
+      }
+
+      frf-login , frf-login.logged {
+        display: none;
+      }
+    </style>
+
+    <script src="static/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="static/elements/hello/hello.html">
     <link rel="import" href="static/elements/ccj-rib/elements.html">
     <link rel="import" href="static/elements/frf-login/elements.html">
     <link rel="import" href="static/elements/ccj-rib/ccj-rib.html">
     <link rel="import" href="static/elements/frf-login/frf-login.html">
     <link rel="import" href="static/bower_components/google-map/google-map.html">
-<link rel="import" href="static/bower_components/google-map/google-map-marker.html">
-    <script src="static/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <script src="static/bower_components/iban/iban.js"></script>
     <style>
       body{
