--- a/vuejs/static/elements/frf-login/frf-login.html
+++ b/vuejs/static/elements/frf-login/frf-login.html
@@ -80,14 +80,14 @@
             }
             /* FORM LOGO*/
 
-             ::slotted(#logo) {
+            #content ::slotted(#logo) {
                 height: 64px;
                 width: 64px;
                 @apply --logo-theme;
             }
             /* FORM TITLE*/
 
-             ::slotted(#title) {
+            #content ::slotted(#title) {
                 color: black;
                 padding-left: 20px;
                 font-size: 24px;
@@ -199,7 +199,11 @@
             }
                 
             onlogin(event) {
+                Polymer.dom(this).classList.add('logged');
                 this.setContext(event.detail.userInfo);
+                this.dispatchEvent(new CustomEvent('login-success', { 
+                    detail: { userInfo: this.userInfo }, composed: true
+                }));
             }
 
             onlogout() {
